Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>
 <a id="zend-server-zray-plugin-for-codeigniter" class="anchor" href="#zend-server-zray-plugin-for-codeigniter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Zend Server Zray Plugin for CodeIgniter</h1>
 
-<p>CodeIgniter plugin provides valuable information on codeIgniter applications, making debugging easy and simple. Z-Ray gives a complete picture of your CodeIgniter environment - including all loaded views, models, helpers, configuration files and stored sessions.</p>
+<p>CodeIgniter plugin provides valuable information on codeIgniter applications, making debugging easy and simple. Z-Ray gives a complete picture of your CodeIgniter environment - including all loaded views, models, helpers, hooks and configuration files.</p>
 
 <ul>
 <li>
@@ -50,15 +50,22 @@
 <strong>Helpers</strong>: display the loaded helpers,</li>
 <li>
 <strong>Request</strong>: provides information on the current route of the CodeIgniter application, such as the controller name, the action name and the parameters.</li>
+<li>
+<strong>Cache</strong>: provides informations about the cache like (size, path, items..).</li>
 </ul>
 
 <h1>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h1>
 
-<p>This plugin is dedicated to ZendServer 8.5 with Zray Extension</p>
+<p>This plugin is dedicated to ZendServer 8.5 with Zray Extension.</p>
+
+<p>Supported CodeIgniter Versoin &gt;= 2.2.0</p>
 
 <p>Zip all files from this repository and go to ZendServer GUI -&gt; Plugins -&gt; Manage Plugins,
 click on Deploy Plugins, upload the Plugin Package and follow the instructions.</p>
+
+<p>After the installation go to :
+Zend DevBar -&gt; CodeIgniter Panel -&gt; Installation Panel, and follow the instructions.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/JCSama">JCSama</a></p>
