Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <li>
 <strong>Hooks</strong>: displays the active Hooks,</li>
 <li>
-<strong>Hooks</strong>: shows the loaded libraries,</li>
+<strong>Libraries</strong>: shows the loaded libraries,</li>
 <li>
 <strong>Models</strong>: shows the loaded models,</li>
 <li>
